mongo-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-ingress
spec:
  rules:
    - host: mymongodbharsh.com
      http:
        paths:
          - path:  /
            pathType: Prefix
            backend:
              service:
                name: mongodb-express-service
                port:
                  number: 8081
